package com.glorydream.chain;

/**
 * @author coryjia@gmail.com
 * @date 5/3/20 3:59 PM
 */
public enum RequestType {
    DEFEND_CASTLE, TORTURE_PRISONER, COLLECT_TAX
}
